--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,10 @@ streamlit>=1.28.0
 python-dotenv>=1.0.0
 requests>=2.31.0
 
+# Mapas interactivos
+folium>=0.14.0
+streamlit-folium>=0.11.0
+
 # Opcional: Para usar OpenAI GPT
 openai>=1.0.0
 
