--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,7 @@
 [theme]
 primaryColor = "#1f77b4"
-backgroundColor = "#ffffff"
-secondaryBackgroundColor = "#f0f2f6"
+backgroundColor = "#e8e8e8"
+secondaryBackgroundColor = "#d3d3d3"
 textColor = "#31333F"
 font = "sans serif"
 
