--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ openai>=1.0.0
 # Opcional: Para scraping avanzado
 beautifulsoup4>=4.12.0
 selenium>=4.13.0
+webdriver-manager>=4.0.0
 
 # Opcional: Para Google Maps (Fase 3)
 googlemaps>=4.10.0
